--- a/src/components/Banner7.css
+++ b/src/components/Banner7.css
@@ -50,7 +50,7 @@
 
 @media (min-width: 991px) {
   .banner7-root {
-    background-attachment: fixed;
+    background-attachment: scroll; /* fixed is broken on iOS Safari */
   }
 }
 
